# CLIP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.txt
.github/workflows/: doxygen.yml
docs/: Boundary_8cu.html  Boundary_8cu__incl.map  Boundary_8cu__incl.md5  Boundary_8cu_source.html  Boundary_8cuh.html  Boundary_8cuh.js  Boundary_8cuh__dep__incl.map  Boundary_8cuh__dep__incl.md5  Boundary_8cuh__incl.map  Boundary_8cuh__incl.md5  Boundary_8cuh_source.html  CheckPointer_8cu.html  CheckPointer_8cu__incl.map  CheckPointer_8cu__incl.md5  CheckPointer_8cu_source.html  CheckPointer_8cuh.html  CheckPointer_8cuh.js  CheckPointer_8cuh__dep__incl.map  CheckPointer_8cuh__dep__incl.md5  CheckPointer_8cuh__incl.map  CheckPointer_8cuh__incl.md5  CheckPointer_8cuh_source.html  DataArray_8cu.html  DataArray_8cu__incl.map  DataArray_8cu__incl.md5  DataArray_8cu_source.html  DataArray_8cuh.html  DataArray_8cuh.js  DataArray_8cuh__dep__incl.map  DataArray_8cuh__dep__incl.md5  DataArray_8cuh__incl.map  DataArray_8cuh__incl.md5  DataArray_8cuh_source.html  DataTypes_8cuh.html  DataTypes_8cuh.js  DataTypes_8cuh__dep__incl.map  DataTypes_8cuh__dep__incl.md5  DataTypes_8cuh_source.html  Domain_8cu.html  Domain_8cu__incl.map  (+550 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  (+52 more)
examples/2D/Bubble/: config.txt
examples/2D/Bubble/Checkpoint/: info.txt
examples/2D/Bubble/Checkpoint_1/: info.txt
examples/2D/Bubble/Checkpoint_10/: info.txt
examples/2D/Bubble/Checkpoint_2/: info.txt
examples/2D/Bubble/Checkpoint_3/: info.txt
examples/2D/Bubble/Checkpoint_4/: info.txt
examples/2D/Bubble/Checkpoint_5/: info.txt
examples/2D/Bubble/Checkpoint_6/: info.txt
examples/2D/Bubble/Checkpoint_7/: info.txt
examples/2D/Bubble/Checkpoint_8/: info.txt
examples/2D/Bubble/Checkpoint_9/: info.txt
examples/2D/RTI/: config.txt
examples/2D/bubble/: config.txt
examples/2D/drop/: config.txt
examples/3D/: config.txt
examples/3D/Jet/: config.txt
examples/3D/Jet/Checkpoint/: info.txt
examples/3D/Jet/Checkpoint_1/: info.txt
examples/3D/RTI/: config.txt
examples/3D/bubble/: config.txt
examples/3D/drop/: config.txt
include/boundary/: Boundary.cuh
include/data/: DataArray.cuh
include/domain/: Domain.cuh
include/equation/: NsAllen.cuh  equation.cuh
include/geometry/: Geometry.cuh
include/input/: InputData.cuh
include/io/: CheckPointer.cuh  VTSwriter.cuh
include/solver/: Solver.cuh  WMRT.cuh
include/utils/: DataTypes.cuh  Logger.cuh  Reporter.cuh  TimeInfo.cuh  includes.h
src/: main.cu
src/boundary/: Boundary.cu
src/data/: DataArray.cu
src/domain/: Domain.cu
src/equation/: NSAllenKernels.cu  NsAllen.cu  equation.cu
src/geometry/: Geometry.cu
src/input/: InputData.cu
src/io/: CheckPointer.cu  VTSwriter.cu
src/solver/: Solver.cu
src/utils/: Reporter.cu  TimeInfo.cu
